[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "scanlt3d"
version = "0.1.7"
description = "Realtime 3D (depth) + detection pipeline for laptop cameras (OpenCV optional)"
requires-python = ">=3.10"
authors = [{name = "scanlt3d contributors"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["realtime", "camera", "depth", "detection"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.23",
  "pillow>=9.0",
  "opencv-python>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-org/scanLt"
Repository = "https://github.com/your-org/scanLt"
Issues = "https://github.com/your-org/scanLt/issues"

[project.optional-dependencies]
onnx = [
  "onnxruntime>=1.16",
]
torch = [
  "torch>=2.0",
]
mediapipe = [
  "mediapipe>=0.10",
]
opencv = []

[tool.maturin]
python-source = "src"
module-name = "scanlt._rust_core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
